# CONCISELY-TEAM

./: .gitignore  README.md  app.py  output.avi  pyproject.toml  readme.md  requirements.txt  timer.py  vd&ad.py  video.py
core/: io.py
static/css/: style.css
static/js/: script.js
templates/: about.html  index.html
testing/: msft.txt  test.py
